--- a/_data/forms/config-oss.yml
+++ b/_data/forms/config-oss.yml
@@ -24,6 +24,10 @@ formGroups:
     title: description
     prepend: use
     rule: alphanum-space
+  - widget: string-i18n
+    title: name
+    prepend: use
+    rule: alphanum-space
   - preset: relatedCode
   - preset: status
   - preset: empty
