🤖 Committed by test@gmail.com

--- a/_data/logiciels_libres-open_source_software/drupal.yml
+++ b/_data/logiciels_libres-open_source_software/drupal.yml
@@ -1,16 +1,19 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Content management system (CMS) written in PHP. Drupal provides a back-end framework for web sites.
-  fr: Système de gestion de contenu (CMS) écrit en PHP. Drupal fournis une plateforme back-end pour des sites Web.
+  en: >-
+    Content management system (CMS) written in PHP. Drupal provides a back-end
+    framework for web sites.
+  fr: >-
+    Système de gestion de contenu (CMS) écrit en PHP. Drupal fournis une
+    plateforme back-end pour des sites Web.
 homepageURL:
-  en: https://www.drupal.org
-  fr: https://www.drupal.org
+  en: 'https://www.drupal.org'
+  fr: 'https://www.drupal.org'
 licenses:
-  -
-    URL:
-      en: https://www.drupal.org/about/licensing#drupal-license
-      fr: https://www.drupal.org/about/licensing#drupal-license
+  - URL:
+      en: 'https://www.drupal.org/about/licensing#drupal-license'
+      fr: 'https://www.drupal.org/about/licensing#drupal-license'
     spdxID: GPL-2.0
 name:
   en: Drupal
@@ -21,11 +24,9 @@ tags:
   fr:
     - Site web
 administrations:
-  -
-    adminCode: cse-cst
+  - adminCode: cse-cst
     uses:
-      -
-        contact:
+      - contact:
           email: webmaster@cse-cst.gc.ca
         date:
           started: '2019-05-06'
@@ -38,14 +39,12 @@ administrations:
           fr: Création de site Web du CST
         users:
           - public
-  -
-    adminCode: tbs-sct
+  - adminCode: tbs-sct
     uses:
-      -
-        contact:
+      - contact:
           URL:
-            en: https://github.com/canada-ca/ore-ero/issues
-            fr: https://github.com/canada-ca/ore-ero/issues
+            en: 'https://github.com/canada-ca/ore-ero/issues'
+            fr: 'https://github.com/canada-ca/ore-ero/issues'
           email: christopher.jaja@tbs-sct.gc.ca
           name: Christopher Jaja
         date:
@@ -59,18 +58,16 @@ administrations:
           fr: Profil d'installation de Drupal 8 pour open.canada.ca
         relatedCode:
           URL:
-            en: https://github.com/open-data/od
-            fr: https://github.com/open-data/od
+            en: 'https://github.com/open-data/od'
+            fr: 'https://github.com/open-data/od'
           name:
             en: open data
             fr: données ouvertes
         users:
           - public
-  -
-    adminCode: tc
+  - adminCode: tc
     uses:
-      -
-        contact:
+      - contact:
           name: Irina Krasteleva
           email: irina.krasteleva@tc.gc.ca
         date:
@@ -82,3 +79,28 @@ administrations:
         description:
           en: APM data
           fr: Données du APM
+  - adminCode: !<tag:yaml.org,2002:js/undefined> ''
+    uses:
+      - contact:
+          email: test@gmail.com
+          URL:
+            en: 'http://test.com'
+            fr: 'http://test.com'
+          name: test
+        date:
+          started: '2019-06-11'
+          metadataLastUpdated: '2019-07-10'
+        description:
+          en: test
+          fr: test
+        name:
+          en: !<tag:yaml.org,2002:js/undefined> ''
+          fr: !<tag:yaml.org,2002:js/undefined> ''
+        relatedCode:
+          - URL:
+              en: 'http://test.com'
+              fr: 'http://test.com'
+            name:
+              en: test
+              fr: test
+        status: Alpha
